--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "deploy": "angular-cli-ghpages --dir ./dist/ngx-charts --name=Swimlane --email=developer@swimlane.com",
     "package": "run-s build:lib:prod copy-files",
     "prepublish:lib": "npm run package",
-    "publish:lib": "npm publish ./dist/swimlane/ngx-charts",
+    "publish:lib": "npm publish ./dist/swimlane/ngx-charts --tag beta",
     "prepack": "npm run package",
     "pack": "npm pack ./dist/swimlane/ngx-charts",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
@@ -43,20 +43,20 @@
     "@angular/router": "~13.1.0",
     "@swimlane/ngx-ui": "^35.6.5",
     "codemirror": "^5.49.2",
-    "d3-array": "^2.9.1",
-    "d3-brush": "^2.1.0",
+    "d3-array": "^3.1.1",
+    "d3-brush": "^3.0.0",
     "d3-color": "^3.1.0",
-    "d3-ease": "^2.0.0",
-    "d3-format": "^2.0.0",
-    "d3-hierarchy": "^2.0.0",
-    "d3-interpolate": "^2.0.1",
-    "d3-scale": "^3.2.3",
-    "d3-selection": "^2.0.0",
-    "d3-shape": "^2.0.0",
+    "d3-ease": "^3.0.1",
+    "d3-format": "^3.1.0",
+    "d3-hierarchy": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "d3-time-format": "^3.0.0",
-    "d3-transition": "^2.0.0",
+    "d3-transition": "^3.0.1",
     "emoji-flags": "^1.2.0",
-    "moment-timezone": "^0.5.28",
+    "moment-timezone": "^0.5.40",
     "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
